[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-watch"
version = "0.1.0"
description = "AI 产品监控 —— 一行命令检查可灵/Vidu/拍我/即梦的最新动态"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
]

[project.scripts]
claw-watch = "claw_watch.cli:main"

[tool.setuptools.packages.find]
include = ["claw_watch*"]
